--- a/250613/电磁线圈发射-250613-01.md
+++ b/250613/电磁线圈发射-250613-01.md
@@ -12,8 +12,6 @@
 
 电枢在发射过程中与导轨之间存在高速滑动电接触，电枢表面存在摩擦磨损现象，且电枢臂存在扩张现象，致使出膛后子弹气动稳定性下降。并且由于电磁轨道发射类似于滑膛发射，子弹在周向方向没有约束，导致子弹初始扰动相对传统线膛发射子弹要大，射击精度下降。电磁发射子弹与电磁轨道发射一体化弹丸对比如图1所示。
 
-> 以上研究成果发表在2021年第22期《电工技术学报》，论文标题为“电磁感应线圈发射子弹系统优化设计”，作者为张晓、鲁军勇 等。
-
 ![让子弹飞得更准！海军工程大学专家提出电磁线圈发射子弹的新方法](https://p9.toutiaoimg.com/origin/tos-cn-i-qvj2lq49k0/783710c1ed674a2ebc135e93bda98f8c?from=pc)
 
 图1 电磁发射与电磁轨道发射一体化弹丸
@@ -37,3 +35,66 @@
 图4 计算模型试验验证
 
 研究人员指出，设计和校核结果表明：若选择两个优化指标平均值最小的解，装置最短长度为0.123m，发射效率为4.89%，且驱动线圈的绝缘和结构强度能够满足使用要求。
+
+> 以上研究成果发表在2021年第22期《电工技术学报》，论文标题为“电磁感应线圈发射子弹系统优化设计”，作者为张晓、鲁军勇 等。
+
+<br>
+
+<br>
+
+---
+
+
+
+**在信息构成的黑暗森林里，每个人都是带枪的猎人。关注 [@bianzhongren](https://t.me/bianzhongren)，让你从猎物变为顶级的掠食者。**
+
+---
+
+### **📢核心阵地 (Our Channels)**
+
+* **Telegram** (资源发布): [点击加入](https://t.me/zzkdm)
+* **Github** (技术教程): [前往订阅](https://github.com/zzkdm888)
+
+---
+
+### **🔍资源搜索 (Search Resource)**
+
+* **全网资源搜索01**: https://t.me/+PKsmUwoGckMzOTcx
+* **全网资源搜索02**: https://t.me/+4gyZv2aIlZMyYzAx
+* **全网资源搜索03**: https://t.me/+ew6WMPpxLnBlMTlh
+* **全网资源搜索04**: https://t.me/+MzZlIqxT-dkxYjBh
+* **全网资源搜索05**: https://t.me/+1QqSdVTuBKUxNjlh
+* **全网资源搜索06**: https://t.me/+uccuaRM2xXBlYTZh
+* **全网资源搜索07**: https://t.me/+Tu79GRHczbllMmMx
+* **全网资源搜索08**: https://t.me/+igp6CSb59G9mYzQx
+* **全网资源搜索09**: https://t.me/+2iLw70FwfL1lZTgx
+
+---
+
+### **⚠️重要声明 (Disclaimer)**
+
+1. **内容用途:** 本人所有平台发布的内容仅供技术学习与信息交流使用。
+2. **政治中立:** 本人不参与、不讨论任何政治相关话题，请共同维护纯粹的技术交流环境。
+3. **谨防诈骗:** 任何**主动联系你**进行交易或索要信息的人**都是骗子**。请务必提高警惕。
+4. **合法合规:** **严禁利用**本项目的任何内容从事任何违反您所在地法律法规的活动。
+5. **责任豁免:** 对于因使用或滥用本项目内容而导致的任何直接或间接的风险、损失或法律责任，**本人及本项目概不负责**。
+
+---
+
+### **❤️支持项目 (Support This Project)**
+
+如果本项目对您有帮助，您的支持是项目持续维护和发展的最大动力。
+
+* **USDT(trc20)**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **TRX**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **USDT(ETH)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(BNB)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(Polygen)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **TON**: UQC5uthDJDZXwbkxkoHH8RTostxLgFp7e1WINiKTOEkCUqDv
+* **BTC(Taproot)**: bc1prk89wp0x7lvzgdmfmufqqm6h807khezdq6w39e3nxg4yzfskcsfswu9x07
+* **BTC(Lagacy)**: 1NwRQD7yjHMsDsQFCjAYkm5QMeciwEj6q
+* **BTC(Nested SegWit)**: 372tCpTnemNA6rt2BhPqSm9Yp4jtJdUG3m
+* **BTC(Native SegWit)**: bc1qm53xvp5auwr6900228gn77rfureah2tvj86eu9
+* **ETH**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+  <br>
+  **感谢您的每一次支持！ ❤️**
