--- a/250719/黑客沙箱-250719-02.md
+++ b/250719/黑客沙箱-250719-02.md
@@ -125,6 +125,7 @@
 * **威胁：** 你发送给目标的任何文件（PDF, DOCX, JPG）都可能包含创建日期、作者、GPS位置等元数据（EXIF data）。
 * **工具：** 使用 `mat2` (Metadata Anonymisation Toolkit v2)。
 * **执行命令 (在Workstation的终端中):**
+
   ```bash
   # 安装工具
   sudo apt-get update && sudo apt-get install mat2 -y
@@ -154,3 +155,64 @@
   4. 从这个钱包支付所需服务。这条路径切断了资金来源与最终用途之间的联系。
 
 **最终戒律：纪律高于一切。一次失误就足以摧毁整个匿名体系。永不交叉污染身份，永不图方便走捷径。你不是在使用工具，你是在扮演一个角色。**
+
+<br>
+
+<br>
+
+---
+
+
+
+**在信息构成的黑暗森林里，每个人都是带枪的猎人。关注 [@bianzhongren](https://t.me/bianzhongren)，让你从猎物变为顶级的掠食者。**
+
+---
+
+### **📢核心阵地 (Our Channels)**
+
+* **Telegram** (资源发布): [点击加入](https://t.me/zzkdm)
+* **Github** (技术教程): [前往订阅](https://github.com/zzkdm888)
+
+---
+
+### **🔍资源搜索 (Search Resource)**
+
+* **全网资源搜索01**: https://t.me/+PKsmUwoGckMzOTcx
+* **全网资源搜索02**: https://t.me/+4gyZv2aIlZMyYzAx
+* **全网资源搜索03**: https://t.me/+ew6WMPpxLnBlMTlh
+* **全网资源搜索04**: https://t.me/+MzZlIqxT-dkxYjBh
+* **全网资源搜索05**: https://t.me/+1QqSdVTuBKUxNjlh
+* **全网资源搜索06**: https://t.me/+uccuaRM2xXBlYTZh
+* **全网资源搜索07**: https://t.me/+Tu79GRHczbllMmMx
+* **全网资源搜索08**: https://t.me/+igp6CSb59G9mYzQx
+* **全网资源搜索09**: https://t.me/+2iLw70FwfL1lZTgx
+
+---
+
+### **⚠️重要声明 (Disclaimer)**
+
+1. **内容用途:** 本人所有平台发布的内容仅供技术学习与信息交流使用。
+2. **政治中立:** 本人不参与、不讨论任何政治相关话题，请共同维护纯粹的技术交流环境。
+3. **谨防诈骗:** 任何**主动联系你**进行交易或索要信息的人**都是骗子**。请务必提高警惕。
+4. **合法合规:** **严禁利用**本项目的任何内容从事任何违反您所在地法律法规的活动。
+5. **责任豁免:** 对于因使用或滥用本项目内容而导致的任何直接或间接的风险、损失或法律责任，**本人及本项目概不负责**。
+
+---
+
+### **❤️支持项目 (Support This Project)**
+
+如果本项目对您有帮助，您的支持是项目持续维护和发展的最大动力。
+
+* **USDT(trc20)**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **TRX**: TQqxEfc6Ptyo8zJXFfcVLeJ6AUr3gFC9W1
+* **USDT(ETH)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(BNB)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **USDT(Polygen)**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+* **TON**: UQC5uthDJDZXwbkxkoHH8RTostxLgFp7e1WINiKTOEkCUqDv
+* **BTC(Taproot)**: bc1prk89wp0x7lvzgdmfmufqqm6h807khezdq6w39e3nxg4yzfskcsfswu9x07
+* **BTC(Lagacy)**: 1NwRQD7yjHMsDsQFCjAYkm5QMeciwEj6q
+* **BTC(Nested SegWit)**: 372tCpTnemNA6rt2BhPqSm9Yp4jtJdUG3m
+* **BTC(Native SegWit)**: bc1qm53xvp5auwr6900228gn77rfureah2tvj86eu9
+* **ETH**: 0x59568a972e5c4e9aedea0ed8b4a8259a9e9953b7
+  <br>
+  **感谢您的每一次支持！ ❤️**
